# FourTops2016

./: .gitattributes  .gitignore  CMakeLists.txt  LOG  LOG.md  README.md  SubmitAll.sh  TTTTMeetingsTaskList.md  craneens.desc  createScripts.py  createScriptsWithCopy.py  submitSkeleton.sh  submitTestSkeleton.sh
MVA/Freyas/: ._makeroottrees.py  BDTAdaBoost_100_3.p  BDTAdaBoost_300_4.p  forDenys.tgz  makeroottrees.py
MVA/HadrTopTraining/: CMakeLists.txt  MVATrainer  MVATrainer.cpp
MVA/HadrTopTraining/MVA/weights/: TMVA_BDTA.class.C  TMVA_BDTA.weights.xml
MVA/HadrTopTraining/ROCcomparison/: Eff_vs_Rej_comparison.cxx  FillSigBG_dist.cxx  ROCcomparison.cxx
MVA/HadrTopTraining/plots/: overtrain_BDTA.eps  rejBvsS.eps  variables_id_c1.eps
MVA/HadrTopTraining/ski-kit/: bdtAdaboost.py  makepickledatasets.py  makeroottrees.py
MVA/tttt_ttz_tth_tt_split_training/: BookMethods.cpp  BookMethods.hpp  CMakeLists.txt  LOG.md  MVATrainer.cpp  README.md  conf_trainer.json
MVA/tttt_ttz_tth_tt_split_training/tools/: conf.json  conf_perf_comp.json  performace_comparison.py
MVA/weights_SingleMuon24thMarch2015/: MasterMVA_SingleMuon_24thMarch_BDT.weights.xml
PU/: lumiSummary_crab_SingleMuon-Run2016B-03Feb2017_ver2-v2crab33.json.sh  lumiSummary_crab_SingleMuon-Run2016C-03Feb2017-v1crab34.json.sh  lumiSummary_crab_SingleMuon-Run2016D-03Feb2017-v1crab35.json.sh  lumiSummary_crab_SingleMuon-Run2016E-03Feb2017-v1crab36.json.sh  lumiSummary_crab_SingleMuon-Run2016F-03Feb2017-v1crab37.json.sh  lumiSummary_crab_SingleMuon-Run2016G-03Feb2017-v1crab38.json.sh  lumiSummary_crab_SingleMuon-Run2016H-03Feb2017_ver2-v1crab39.json.sh  lumiSummary_crab_SingleMuon-Run2016H-03Feb2017_ver3-v1crab40.json.sh  producePU.zsh  rootplot_config.py  submitSkeleton.sh
PU/Freya_crab_jsons/: lumiSummary_crab_DoubleEG-Run2016B-03Feb2017_ver2-v2crab9.json  lumiSummary_crab_DoubleEG-Run2016G-03Feb2017-v1crab14.json  lumiSummary_crab_DoubleEG-Run2016H-03Feb2017_ver2-v1crab15.json  lumiSummary_crab_DoubleMuon-Run2016G-03Feb2017-v1crab6.json  lumiSummary_crab_DoubleMuon-Run2016H-03Feb2017_ver2-v1crab7.json  lumiSummary_crab_JetHT-Run2016B-03Feb2017_ver2-v2crab41.json  lumiSummary_crab_JetHT-Run2016F-03Feb2017-v1crab45.json  lumiSummary_crab_JetHT-Run2016G-03Feb2017-v1crab46.json  lumiSummary_crab_JetHT-Run2016H-03Feb2017_ver2-v1crab47.json  (+9 more)
SingleLepAnalysis/src/: CMakeLists.txt  CutsTable.cc  HadronicTopReco.cc  MultiTopEvent.cpp  Trigger.cc  Trigger_sync.cc  Zpeak.cc
SingleLepAnalysis/src/backup/: HadronicTopReco.cc
SubmitScripts/: big-submission  bug-submission  isZombie.py  job-monitor.py  resubmit.sh  torque-user-info.py
ana/src/: BTagSF.cc  CMakeLists.txt  FourTop_EventSelection_Dilepton_Run2.cc  FourTop_EventSelection_Dilepton_sgluon.cc  FourTop_EventSelection_SingleLepton_Run2.cc  FourTop_EventSelection_SingleLepton_Run2_Local.cc  FourTop_EventSelection_SingleLepton_Run2_Local_sync.cc  FourTop_EventSelection_SingleLepton_Run2_New.cc  VecTLorentzVector.cpp  VecTLorentzVector_rdict.pcm  git_meta_info.cmake.in
config/: BtagHistoTTJets.xml  FullElectronTopTrees80.xml  FullElectronTopTrees80_2016.xml  FullElectronTopTrees80_CMSSW_80X_v1-Cert_271036-284044_13TeV_PromptReco_Collisions16_JSON_NoL1T.xml  FullElectronTopTrees80_v1.xml  FullElectronTopTrees80_v12.xml  FullElectronTopTrees80_v12_nomasswidth.xml  FullElectronTopTrees80_v12_nomasswidth_cutbased.xml  FullElectronTopTrees80_v2.xml  FullElectronTopTrees80_v7.xml  FullElectronTopTrees80_v9.xml  FullMuonTopTrees80.xml  FullMuonTopTrees80_CMSSW_80X_v1-Cert_271036-284044_13TeV_PromptReco_Collisions16_JSON_NoL1T.xml  FullMuonTopTrees80_v1.xml  FullMuonTopTrees80_v12.xml  FullMuonTopTrees80_v12_nomasswidth.xml  FullMuonTopTrees80_v12_nomasswidth_cutb.xml  FullMuonTopTrees80_v2.xml  FullMuonTopTrees80_v7.xml  FullMuonTopTrees80_v9.xml  SystElectronTopTrees80_v12.xml  SystElectronTopTrees80_v9.xml  SystMuonTopTrees80_v1.xml  SystMuonTopTrees80_v12.xml  SystMuonTopTrees80_v9.xml  lumi2016.csv  output_FullElectronTopTrees80_2016.xml  output_FullElectronTopTrees80_CMSSW_80X_v1-Cert_271036-284044_13TeV_PromptReco_Collisions16_JSON_NoL1T.xml  output_FullElectronTopTrees80_v1.xml  output_FullMuonTopTrees80_CMSSW_80X_v1-Cert_271036-284044_13TeV_PromptReco_Collisions16_JSON_NoL1T.xml  output_FullMuonTopTrees80_v0.xml  xmlFiller.py
histos/: Hist_powheg_80X.root  Histo_MLM_76X.root  Histo_MLM_76X_Down.root  Histo_MLM_76X_Up.root  Histo_powheg_76X.root  Histo_powheg_76X_Down.root
latex/: plotter.py  singleelectroncp.json  singleleptoncp.json  systematics.json  texplotspage.py
result/: CHEF_README.md  CMS_lumi.py  Makefile  Makefile_cards.mk  Makefile_comb.mk  Makefile_hist.mk  Makefile_merge.mk  Makefile_norm.mk  Makefile_plots.mk  Makefile_postfit.mk  Makefile_sys.mk  cards_syst_BTAG.py  cards_syst_BTAG_JES.py  cards_syst_HDAMP.py  cards_syst_HDAMP_3and4bsplit.py  cards_syst_HDAMP_alt.py  cards_syst_IFSRUE.py  cards_syst_IFSRUE_3and4bsplit.py  cards_syst_JEC.py  cards_syst_JEC_3and4bsplit.py  cards_syst_ME.py  cards_syst_ME_3and4bsplit.py  cards_syst_PAGPT.py  cards_syst_PDF.py  cards_syst_PDF_3and4bsplit.py  cards_syst_PT.py  cards_syst_PU.py  cards_syst_TTCC.py  cards_syst_TTX.py  centralweight.py  chef_histogram.py  chef_histogram_v1.py  chef_plot.py  chef_plot_v1.py  chef_plot_v2.py  config_t2h.py  config_t2h_cards.py  custombinning.py  datayields.py  externalize_limit.py  (+13 more)
result_scons/: .sconsign.dblite  SConstruct  cards_syst_BTAG.py  cards_syst_IFSRUE.py  cards_syst_ME.py  hist.scons  listofplots_cards.py  merge.scons
sysplot/: CSV.json  CSV_tt.json  CSV_tttt.json  HF_tt.json  JESCOMPONENTS_tt.json  JESCOMPONENTS_tttt.json  JES_tt.json  JES_tttt.json  Prefit_postfit_comparison.json  TOPPTREW.json  TOPPTREW_comparison.json  Theory_tt.json  Theory_tttt.json  example.json  plotter.py  stat.json  stat_plotter.py  statplot.py  sysplot.py
test/: Makefile  README  central.py  plotComparison.C  testconf_data.qa  testconf_mc.qa  testconf_mc_unbinned.qa
tools/: listCran  mergeCran4comparison.sh
trgeff/: TRIGGERS_JHT.TXT  TRIGGERS_MC.TXT  TRIGGERS_SL.TXT  trgeff.py
(+409 files in other folders)
